[package]
name = "async-io-converse"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Can conduct a conversation over any AsyncRead or AsyncWrite type with serde compatible types"
readme = "README.md"
repository = "https://github.com/Xaeroxe/async-io-converse"
documentation = "https://docs.rs/async-io-converse/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3"
futures-util = "0.3"
async-io-typed = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["time", "sync", "rt"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}
rand = "0.8"